[package]
name = "hide-my-mess"
description = "Virtual camera reliably crops your wonderful self out of your webcam"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/OtaK/hide-my-mess-rs"
license = "MIT/Apache-2.0"

[features]
default = ["gpu"]
gpu = ["tensorflow/tensorflow_gpu"]

[dependencies]
eyre = "0.6"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
tensorflow = "0.17"
clap = { version = "3.0", features = ["derive"] }
nokhwa = { version = "0.10", features = ["input-v4l"] }
image = "0.23"
v4l = "0.12"
dirs = "4.0"
zip = "0.5"
attohttpc = "0.18"

[patch.crates-io.nokhwa]
# path = "../nokhwa"
git = "https://github.com/otak/nokhwa"
branch = "otak/buff-buffers"

# [dependencies.nokhwa]
# version = "0.9"
# features = ["input-v4l", "input-msmf", "input-avfoundation"]

[profile.release]
lto = true
