[package]
name = "hide-my-mess"
description = "Virtual camera reliably crops your wonderful self out of your webcam"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/OtaK/hide-my-mess-rs"
license = "MIT/Apache-2.0"

[features]
default = ["gpu"]
gpu = ["tensorflow/tensorflow_gpu"]

[dependencies]
eyre = "0.6"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
tensorflow = "0.21"
clap = { version = "4", features = ["derive"] }
image = "0.24"
v4l = "0.14"
dirs = "5.0"
zip = "0.6"
attohttpc = "0.26"

[dependencies.nokhwa]
# version = "0.10"
git = "https://github.com/l1npengtul/nokhwa.git"
branch = "0.10"
features = ["input-v4l"]

[profile.release]
lto = true
